2005-02-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_surface.[ch]: Instead of counting
	on ordering deletion to work (apparently it didn't on
	older Windows), save the initial bitmap created
	with the DC and reselect that into the DC. (Based
	on a patch by Hans Breuer)

2005-02-24  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore: Add pixman_rotate to ignore list.

2005-02-24  Carl Worth  <cworth@cworth.org>

	Fixes from David Reveman with minor cleanups by Carl Worth:

	* src/cairo_gstate.c (_cairo_gstate_create): Handle new failure
	possibility of _cairo_gstate_init.
	(_cairo_gstate_init): Handle possible failure of
	_cairo_pattern_create_solid.
	(_cairo_gstate_set_pattern): Reference new pattern before
	destroying existing pattern to handle the case where they are the
	same.
	(_cairo_gstate_set_rgb_color): Handle possible failure of
	_cairo_pattern_create_solid.

2005-02-24  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Fix typo (pointed out by Kristian Høgsberg).

2005-02-24  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_surface.c (_cairo_win32_surface_destroy): 
	When we created a DC/bitmap pair, delete the DC before
	the Bitmap so that the Bitmap will be released from the
	DC and can be destroyed. (Reported by Hans Breuer)

	* configure.in cairo.pc.in: Only require fontconfig
	if building FreeType font backend.

	* configure.in: Fix output when reporting Win32 font backend.

2005-02-24  Carl Worth  c<worth@cworth.org>

	* TODO: Remove many TODO items that have now been absorbed by the
	API shakeup. Remove comparison with PostScript as there's nothing
	interesting there left unimplemented, (and cairo is already
	establishing its own conventions in naming and behavior that
	deviate from PostScript).

	* src/cairoint.h: Fix typo (pointed out by Mike Emmel)

2005-02-23  Carl Worth  <cworth@cworth.org>

	* TODO: Add entries from API Shakeup.

2005-02-22  Carl Worth  <cworth@cworth.org>

	* README:
	* src/cairo-features.h.in: