@@ -1,3 +1,8 @@
+2005-02-24  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo_pattern.c (cairo_pattern_add_color_stop): Fix memory
+	leak when realloc fails due to out-of-memory.
+
 2005-02-24  Owen Taylor  <otaylor@redhat.com>
 
 	* src/cairo_win32_surface.[ch]: Instead of counting
